# Core

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  annotated.html  appveyor.yml  classes.html  conanfile.py  dir_22e3f509b8cad2d95246f0e35c32c80f.html  dir_2bf7eb13a0e5a98dd226965046974ef4.html  dir_30b974a6a36320b797fb0b0125540cd2.html  dir_6bb7c627bbe49c7d69812e09f9444fd3.html  dir_7b1f27b803fc7ddc13ef83c92522c7f9.html  dir_7c710460b4e1792c3178a0fe6ffa4657.html  dir_8c63dc656027b3cfd94aeaa301fb3539.html  dir_8fee50fe1d6ff6f3022cc628136d04d6.html  dir_911e2e3e6d3b64043b13d829b7a3782c.html  dir_b144e0860b4df13f2c687468b5730234.html  dir_b72a7a544702901ca08bedd1c3565e7c.html  dir_c0b303e3c8970439ce30554ab9d72c8f.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f99618e34500ef434cc4c8a1b59fbfeb.html  files.html  functions.html  functions_0x7e.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_f.html  functions_func.html  functions_func_0x7e.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  (+59 more)
.ci/: deploy_conan.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  feature.md  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md  new_feature.md  update_feature.md
.travis/: deploy_conan.sh  deploy_doxygen.sh
CMake/Templates/: PackageConfig.cmake.in  PackageConfigVersion.cmake.in  version.hpp.in
d0/d12/: is__explicitly__convertible_8hpp_source.html
d0/d23/: classbit_1_1core_1_1range.html
d0/d29/: structbit_1_1core_1_1type__identity-members.html
d0/d2b/: classbit_1_1core_1_1variant.html
d0/d3d/: is__derived__from__all_8hpp_source.html
d0/d44/: structbit_1_1core_1_1is__one__of_3_01_t_00_01_t0_00_01_ts_8_8_8_01_4.html
d0/d45/: structbit_1_1core_1_1normalize__char_3_01signed_01char_01_4-members.html
d0/d4e/: structbit_1_1core_1_1arity_3_01_r_07_types_8_8_8_08_01const_01volatile_01_4.html  structbit_1_1core_1_1is__cv__member__function__pointer_3_01_r_07_c_1_1_5_08_07_args_8_8_8_08_01const_01volatile_01_4.html
d0/d4f/: is__trivially__assignable_8hpp_source.html
d0/d56/: structbit_1_1core_1_1is__const__member__function__pointer_3_01_r_07_c_1_1_5_08_07_args_8_8_8_08_01const_01_4.html
d0/d5a/: match__ref__qualifiers_8hpp_source.html  structbit_1_1core_1_1function__signature_3_01_fn_01_6_6_01_4.html
d0/d5e/: is__nothrow__assignable_8hpp_source.html
d0/d68/: delegate_8hpp_source.html
d0/d71/: structbit_1_1core_1_1in__place__index__t.html
d0/d83/: structbit_1_1core_1_1is__reversible__container.html
d0/d94/: classbit_1_1core_1_1source__location-members.html
d0/db9/: structbit_1_1core_1_1is__expected.html
d0/dba/: map__view_8hpp_source.html
d0/dbf/: structbit_1_1core_1_1are__same.html
d0/dca/: is__different_8hpp_source.html
d0/dcd/: structbit_1_1core_1_1is__contiguous__container.html
d0/dd1/: structbit_1_1core_1_1is__equality__comparable.html
d0/de2/: structbit_1_1core_1_1are__nothrow__copy__constructible.html
d0/de7/: classbit_1_1core_1_1tribool.html
d0/de8/: structbit_1_1core_1_1is__span_3_01span_3_01_t_00_01_n_01_4_01_4.html
d0/deb/: structbit_1_1core_1_1unexpect__t-members.html
d0/def/: is__one__of_8hpp_source.html
d0/df0/: monostate_8hpp_source.html
d0/df3/: is__cv__member__function__pointer_8hpp_source.html
d0/df7/: classbit_1_1core_1_1basic__zstring__view-members.html
d1/d08/: is__implicitly__constructible_8hpp_source.html
d1/d25/: is__trivially__move__assignable_8hpp_source.html
d1/d27/: classbit_1_1core_1_1span.html
d1/d50/: structbit_1_1core_1_1tuple__size_3_01compressed__pair_3_01_ts_8_8_8_01_4_01_4.html
d1/d56/: classbit_1_1core_1_1bad__expected__access_3_01void_01_4-members.html
d1/d59/: structbit_1_1core_1_1base__type_3_01_t_01_6_6_01_4-members.html
d1/d5c/: structbit_1_1core_1_1in__place__t-members.html
d1/d5f/: classbit_1_1core_1_1allocator__deleter.html
d1/d64/: structbit_1_1core_1_1variant__size.html
d1/d6a/: namespacebit_1_1core_1_1detail.html
d1/d70/: is__copy__assignable_8hpp_source.html
d1/d77/: structbit_1_1core_1_1arity_3_01_r_07_c_1_1_5_08_07_types_8_8_8_08_01volatile_01_4.html
d1/d80/: structbit_1_1core_1_1is__base__of__any.html
d1/d82/: classbit_1_1core_1_1basic__string__view-members.html
d1/d85/: structbit_1_1core_1_1tuple__size_3_01compressed__pair_3_01_t_00_01_u_01_4_01_4.html
d1/d94/: structbit_1_1core_1_1size__constant.html
d1/da2/: resolves__overload_8hpp_source.html
d1/dab/: classbit_1_1core_1_1map__view-members.html
d1/dad/: group___nullable_pointer.html
d1/dae/: classbit_1_1core_1_1bad__variant__access.html
d2/d53/: range_8hpp_source.html
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+61 more)
test/: CMakeLists.txt  main.test.cpp
test/bit/core/containers/: array_view.test.cpp  ring_buffer.test.cpp  ring_deque.test.cpp  set_view.test.cpp  span.test.cpp  string_view.test.cpp
test/bit/core/memory/: exclusive_ptr.test.cpp  memory.test.cpp
test/bit/core/utilities/: compressed_pair.test.cpp  delegate.test.cpp  expected.test.cpp  lazy.test.cpp  optional.test.cpp  scope_guard.test.cpp  tribool.test.cpp  variant.test.cpp
test/src/bit/core/containers/: ring_deque.test.cpp  span.test.cpp  string_view.test.cpp
test/src/bit/core/memory/: exclusive_ptr.test.cpp
test/src/bit/core/utilities/: any.test.cpp  compressed_pair.test.cpp  delegate.test.cpp  expected.test.cpp  optional.test.cpp
test_package/: CMakeLists.txt  conanfile.py
(+605 files in other folders)
